# CPU-CTLPDS

BenchmarkGenerate/: .project  bm.abpds
BenchmarkGenerate/src/: BMGenerate.java  FromConfig.java  Rule.java  ToConfig.java
PCCOP/: .cproject  .project  abpds.xml
PCCOP/Debug/: PCCOP  makefile
PCCOP/Debug/src/: abpdsc.d  main.d  subdir.mk  utility.d
PCCOP/src/: PCCOP.cu  abpds.cu  abpds.cuh  abpds.h  abpdsc.cu  abpdspre.cu  abpdspre.cuh  ama.cu  ama.cuh  ama.h  common.cu  common.cuh  common.h  main.cu  utility.cu  utility.cuh  utility.h
PuMoC/: .deps  Makefile  PuMoC  Readme  abpds.c  abpds.d  abpds.h  abpds.txt  abpdslex.c  abpdslex.l  abpdsparse.c  abpdsparse.y  abpdsprestar.c  afa.c  afa.h  ba.d  balex.c  balex.l  bdd.c  bdd.d  bdd.h  bp.c  bp.d  bp.y  bpgraph.d  bplex.c  bplex.l  bpmake.c  bpspecial.c  bpstruc.h  bptree.d  bpuse.c  bpuse.d  cegar_tmp_abstract.smv  common.c  common.h  ctllex.c  ctllex.l  ctlparse.c  ctlparse.d  (+44 more)
PuMoC/Debug/: vc60.idb
PuMoC/JimpleToPDSolver/CVS/: Entries  Repository
PuMoC/JimpleToPDSolver/doc/: CHANGES  README  TODO  license.BuDDy  license.CUDD  license.SBL
PuMoC/JimpleToPDSolver/doc/CVS/: Entries  Repository
PuMoC/JimpleToPDSolver/lib/CVS/: Entries  Repository
PuMoC/JimpleToPDSolver/src/CVS/: Repository
PuMoC/JimpleToPDSolver/src/jbdd/: JBDD.java
PuMoC/cudd-2.4.1/: Makefile
PuMoC/cudd-2.4.1/nanotrav/: nanotrav
PuMoC/examples/: atoms.pds  bebop.pl  heapify.pds  lock-error.pds  lock.bp  lock.pds  lock2.bp  plot.pds  quicksort_correct.pds  quicksort_random.pds  quicksort_withvars.pds
PuMoC/satabs/: lock.c
PuMoC/satabs/iml-1.0.3/: Makefile.am  Makefile.in  aclocal.m4  config-h.in  configure  configure.ac  libtool
PuMoC/satabs/iml-1.0.3/config/: Makefile.in
PuMoC/satabs/iml-1.0.3/doc/: Makefile.in
PuMoC/satabs/iml-1.0.3/examples/: Makefile.in  iml.h
PuMoC/satabs/iml-1.0.3/repl/: Makefile.am  Makefile.in
PuMoC/satabs/iml-1.0.3/src/: Makefile.am  Makefile.in  cblas.h  nullspace.c
PuMoC/satabs/iml-1.0.3/tests/: Makefile.in
PuMoC/satabs/verbs/: Makefile  README  arit.c  arit.h  bool.c  config.h  conv.c  conv.h  form.c  form.h  issat.c  main.c  main.h  trop.c  trop.h  util.c  util.h  verbs  wfb.h  wff.h  wft.h
PuMoC/satabs/verds/: Makefile  bp2q.c  bp2s.c  config.h  dmc.c  dmc.h  f2p.c  form.c  form.h  issat.c  issat.h  keywords.h  main.c  main.h  opt1.c  opt1.h  p2bp.c  p2bp.h  p2var.h  prep.c  prep.h  q1rd.c  q2nt.c  qbf.c  tbd.c  tree.c  verds  wfbp2q.h  wfform.h  wfopt1.h  wfp2bp.h  wfprep.h  wfq0cnf.h  wftbd.h
PuMoC/test/: a.ctpl  bp.ctl  c.ctl  c.ctl~  dataflow.pds  java.ctl~  quick start.abpds~  quick start.bp  quick start.ctl  quick start.pds  quick start.pds~  readme.txt  satabs.1.bp~  simple1.pds
PuMoC/test/emptiness/: Example in Paper  example0.abpds  t1.abpds  t10.abpds  t2.abpds  t3.abpds  t4.abpds  t5.abpds  t6.abpds  t7.abpds  t8.abpds  t9.abpds
xmlAPDSGenerate/: .classpath  .project  abpds.json  abpds.txt  abpds.xml
xmlAPDSGenerate/src/ABPDS/: Configuration.java  PDS.java  Rule.java
xmlAPDSGenerate/src/jsonGenerate/: GenerateJson.java  GenerateXML.java
(+250 files in other folders)
